# panbuild

./: .gitignore  Cargo.toml  HACKING.md  LICENSE.txt  README.md  net.louib.2flatpak.yaml  net.louib.2flatpak.yml  net.louib.panbuild.yml  remotes.txt  rustfmt.toml  setup.py  snap2flatpak
.cargo/: config.toml
.github/workflows/: flatpak-build-docker.yml  flatpak-build.yml  flatpak-install.yml  linterzzz.yml  pep8.yml  tests.yml
build-aux/: net.louib.panbuild.yml
doc/: panbuild.1.adoc
manpages/: 2flatpak.1  panbuild.1  panbuild.1.adoc
panbuild/: Cargo.toml  db.rs  developers.rs  hubs.rs  lib.rs  main.rs  modules.rs  panbuild.yml  projects.rs  utils.rs  version.rs
panbuild/hubs/: deb.rs  github.rs  gitlab.rs
panbuild/manifests/: debian.rs  flatpak.rs  javascript.rs  manifest.rs
pb-tools/: Cargo.toml  lib.rs
pb-tools/hubs/: brew.rs  deb.rs  github.rs  gitlab.rs
scripts/: bump_version.sh  check_version.sh  discover_repos.py  fetch_repos.sh  get_brew_packages.sh  get_debian_source_packages.sh  get_flathub_manifests.py  get_flatpak_shared_modules.sh  get_projects.py  get_projects.sh  install.sh  merge_projects.py  parse_brew_packages.py  parse_debian_source_packages.py  publish.sh  snap2flatpak  yml2json
src/: config.rs  db.rs  debian.rs  execution_context.rs  flatpak.rs  hubs.rs  lib.rs  logger.rs  main.rs  manifest.rs  manifests.rs  modules.rs  npm.rs  panbuild.yml  projects.rs  pyproject.rs  snap.rs  snap2flatpak  utils.rs  version.rs
src/hubs/: brew.rs  github.rs  gitlab.rs  hub.rs
src/manifests/: abstract_manifest.rs  arch.rs  cargo.rs  debian.rs  flatpak.rs  javascript.rs  manifest.rs  pyproject.rs  snap.rs
src/modules/: db.rs  module.rs
src/projects/: db.rs  project.rs
tests/: convert_tests.rs  debian.rs  run_functional_tests.py  run_functional_tests.rs  run_functional_tests.sh  smoke_tests.sh
tests/fixtures/debian/: libhandy-9e4bb03d19.txt  ppa-flatpak-builder-23072efa70.txt
toflatpak/: __init__.py  flatpakmanifest.py  pyproject.py  snap.py  toflatpak  toflatpak.py
