[package]
name = "panbuild"
version = "0.0.7"
authors = ["louib <code@louib.net>"]
edition = "2018"
description = "The universal build manifest converter."
license = "BSD-3-Clause"
repository = "https://github.com/louib/panbuild/"
readme = "README.md"
keywords = [
  "flatpak",
  "snap",
  "package-manager",
  "package",
  "packages",
  "manifest",
  "snapcraft",
  "converter",
  "build",
  "debian",
  "debian-packaging"
]

exclude = [
    ".github/*",
    "scripts/*",
    "tests/*",
    "remotes.txt",
]

[dependencies]
yaml-rust = "0.4"
clap = "2.33.1"
linked-hash-map = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
