[package]
name = "panbuild"
version = "0.0.11"
authors = ["louib <code@louib.net>"]
edition = "2018"
description = "The universal builder."
license = "BSD-3-Clause"
repository = "https://github.com/louib/panbuild/"
readme = "README.md"
keywords = [
  "flatpak",
  "snap",
  "packages",
  "manifest",
  "workspace",
]

include = [
    "src/**/*",
    "doc/**/*",
    "README.md",
    "VERSION",
    "LICENSE.txt",
    "Cargo.lock",
]

[dependencies]
clap = {version = "2.33.1", features = ["yaml"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
