[package]
name = "pb-tools"
version = "0.0.11"
authors = ["louib <code@louib.net>"]
edition = "2018"
description = "Panbuild tools."
license = "BSD-3-Clause"
repository = "https://github.com/louib/panbuild/"
readme = "README.md"
keywords = [
  "flatpak",
  "snap",
  "packages",
  "manifest",
  "workspace",
]

[[bin]]
name = "pb-tools"
path = "bin/pb-tools.rs"

[lib]
path = "lib.rs"

[dependencies]
panbuild = { path = "../panbuild" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
# toml is used with serde as well.
toml = "0.5"

log = "0.4"
simple-logging = "2.0.2"

# HTTP related dependencies.
reqwest = { version = "0.11", features = ["cookies", "blocking", "json"] }
tokio = { version = "1.1.1", features = ["full"] }
futures = "0.3"
